Added 'Choose File' option

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 	<div id="left" class="panel">
 		<h1>Image Editor</h1>
 		<div id="canvas-container"></div>
-		<div id="dropzone">Drag and drop your image here</div>
+		<div id="dropzone">
+			<label for="files" id="choose-button">Choose file</label>
+			<p>or drop your image here</p>
+		</div>
 		<button id="download-button">Download image</button>
+		
 	</div>
 	<div id="right" class="panel">
 		<label for="red-slider">Red</label>
